--- a/real-estate-project/index.html
+++ b/real-estate-project/index.html
@@ -2,11 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <style>
+        h1 {
+            font-family: 'Proxima Nova', serif;
+            color: #555555;
+            text-align: center;
+        }
+    </style>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="script.js"></script>
     <title>Project 3</title>
 </head>
 <body onload="main()">
+
+    <h1>Which San Diego submarket for your next multifamily investment? </h1>
+    <br>
+
+    <div id="unitRange"; style="display: flex; justify-content: center; margin-top: 20px;">
+        <label><input type="radio" name="unitRange" value="0-9"> 0-9 units</label>
+        <label><input type="radio" name="unitRange" value="10-49"> 10-49 units</label>
+        <label><input type="radio" name="unitRange" value="50-199"Checked> 50-199 units</label>
+        <label><input type="radio" name="unitRange" value="200-499"> 200-499 units</label>
+        <label><input type="radio" name="unitRange" value="500+"> 500+ units</label>
+        <label><input type="radio" name="unitRange" value="All"> All</label>
+    </div>
+
+    <br>
+
+    <br>
 
 </body>
 </html>
