--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
             color: #555555;
             text-align: center;
         }
+        h3 {
+            font-family: 'Proxima Nova', serif;
+            color: #555555;
+            text-align: center;
+        }
     </style>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="script.js"></script>
@@ -16,6 +21,7 @@
 <body onload="main()">
 
     <h1>Which San Diego submarket for your next multifamily investment? </h1>
+    <h3>Data source: CoStar </h3>
     <br>
 
     <div id="unitRange"; style="display: flex; justify-content: center; margin-top: 20px;">
